--- a/deployments/example.yaml
+++ b/deployments/example.yaml
@@ -1,3 +1,10 @@
+config:
+  chain: example
+  chain_id: 1
+  fee_receiver: '0xeCb456EA5365865EbAb8a2661B0c503410e9B347'
+  owner: '0x40907540d8a6C65c637785e8f8B742ae6b0b9968'
+  rollup_type: mainnet
+  weth: '0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2'
 contracts:
   address_provider:
     address: '0x0880cf17Bd263d3d3a5c09D2D86cCecA3CcbD97c'
@@ -8,37 +15,37 @@ contracts:
     constructor_args_encoded: null
     contract_github_url: https://github.com/curvefi/curve-lite/blob/df153f82b7d86f67bed2adc70f0f444df0891656/contracts/registries/address_provider/address_provider_v_201.vy
     contract_version: 2.0.1
-    deployment_timestamp: 1721647096
+    deployment_timestamp: 1721650193
   factory:
     address: '0x261B5BAEBC6A3DdA3b91ADa3778AD3a3503bFD18'
     compiler_settings:
       compiler_version: 0.3.10
-      evm_version: paris
+      evm_version: shanghai
       optimisation_level: GAS
     constructor_args_encoded: 000000000000000000000000ecb456ea5365865ebab8a2661b0c503410e9b34700000000000000000000000000de89c733555886f785b0c32b498300297e481f
     contract_github_url: https://github.com/curvefi/curve-lite/blob/dd15266111683807cf1ea57f1dfc45c25e61ec3a/contracts/amm/stableswap/factory/factory_v_100.vy
     contract_version: 1.0.0
-    deployment_timestamp: 1721647114
+    deployment_timestamp: 1721650209
   implementation:
     address: '0x73f2D414DCE6AAbB3672bd5BF732A2C87cBff751'
     compiler_settings:
       compiler_version: 0.3.10
-      evm_version: paris
+      evm_version: shanghai
       optimisation_level: CODESIZE
     constructor_args_encoded: null
     contract_github_url: https://github.com/curvefi/curve-lite/blob/39693133dc01e53f4c2ba5b1d58aeefb493fe7f7/contracts/amm/stableswap/implementation/implementation_v_700.vy
     contract_version: blueprint
-    deployment_timestamp: 1721647104
+    deployment_timestamp: 1721650199
   math:
     address: '0xB822167C7EefF0B53DcfDEE2D8fe73dEDB25505b'
     compiler_settings:
       compiler_version: 0.3.10
-      evm_version: paris
+      evm_version: shanghai
       optimisation_level: GAS
     constructor_args_encoded: null
     contract_github_url: https://github.com/curvefi/curve-lite/blob/dd15266111683807cf1ea57f1dfc45c25e61ec3a/contracts/amm/stableswap/math/math_v_100.vy
     contract_version: 1.0.0
-    deployment_timestamp: 1721647097
+    deployment_timestamp: 1721650194
   meta_implementation:
     address: '0x326B089670ba0E6700B1821c34d7b4Afddb11d1b'
     compiler_settings:
@@ -48,9 +55,9 @@ contracts:
     constructor_args_encoded: null
     contract_github_url: https://github.com/curvefi/curve-lite/blob/dd15266111683807cf1ea57f1dfc45c25e61ec3a/contracts/amm/stableswap/meta_implementation/meta_implementation_v_700.vy
     contract_version: blueprint
-    deployment_timestamp: 1721647109
+    deployment_timestamp: 1721650204
   router:
-    address: '0x0880cf17Bd263d3d3a5c09D2D86cCecA3CcbD97c'
+    address: '0x2cb6bCe32aeF4eD506382896e702DE7Ff109D9E9'
     compiler_settings:
       compiler_version: 0.3.10
       evm_version: paris
@@ -58,7 +65,7 @@ contracts:
     constructor_args_encoded: 000000000000000000000000c02aaa39b223fe8d0a0e5c4f27ead9083c756cc2
     contract_github_url: https://github.com/curvefi/curve-lite/blob/0f3143402f74b3e43f8287e65130b3ce32aa89ac/contracts/helpers/router/router_v_110.vy
     contract_version: 1.1.0
-    deployment_timestamp: 1721647575
+    deployment_timestamp: 1721650193
   views:
     address: '0xDa5e407C7b1887E7f76c920B70614e73feA0DDA1'
     compiler_settings:
@@ -68,4 +75,4 @@ contracts:
     constructor_args_encoded: null
     contract_github_url: https://github.com/curvefi/curve-lite/blob/03cd0cecb6cf78ec926310a2fe8976efa607d0e6/contracts/amm/stableswap/views/views_v_120.vy
     contract_version: 1.2.0
-    deployment_timestamp: 1721647099
+    deployment_timestamp: 1721650194
