--- a/deployments/example.yaml
+++ b/deployments/example.yaml
@@ -15,7 +15,8 @@ contracts:
     constructor_args_encoded: null
     contract_github_url: https://github.com/curvefi/curve-lite/blob/df153f82b7d86f67bed2adc70f0f444df0891656/contracts/registries/address_provider/address_provider_v_201.vy
     contract_version: 2.0.1
-    deployment_timestamp: 1721650193
+    deployment_timestamp: 1721651056
+    deployment_type: normal
   factory:
     address: '0x261B5BAEBC6A3DdA3b91ADa3778AD3a3503bFD18'
     compiler_settings:
@@ -25,7 +26,8 @@ contracts:
     constructor_args_encoded: 000000000000000000000000ecb456ea5365865ebab8a2661b0c503410e9b34700000000000000000000000000de89c733555886f785b0c32b498300297e481f
     contract_github_url: https://github.com/curvefi/curve-lite/blob/dd15266111683807cf1ea57f1dfc45c25e61ec3a/contracts/amm/stableswap/factory/factory_v_100.vy
     contract_version: 1.0.0
-    deployment_timestamp: 1721650209
+    deployment_timestamp: 1721651060
+    deployment_type: normal
   implementation:
     address: '0x73f2D414DCE6AAbB3672bd5BF732A2C87cBff751'
     compiler_settings:
@@ -34,8 +36,9 @@ contracts:
       optimisation_level: CODESIZE
     constructor_args_encoded: null
     contract_github_url: https://github.com/curvefi/curve-lite/blob/39693133dc01e53f4c2ba5b1d58aeefb493fe7f7/contracts/amm/stableswap/implementation/implementation_v_700.vy
-    contract_version: blueprint
-    deployment_timestamp: 1721650199
+    contract_version: 7.0.0
+    deployment_timestamp: 1721651057
+    deployment_type: blueprint
   math:
     address: '0xB822167C7EefF0B53DcfDEE2D8fe73dEDB25505b'
     compiler_settings:
@@ -45,7 +48,8 @@ contracts:
     constructor_args_encoded: null
     contract_github_url: https://github.com/curvefi/curve-lite/blob/dd15266111683807cf1ea57f1dfc45c25e61ec3a/contracts/amm/stableswap/math/math_v_100.vy
     contract_version: 1.0.0
-    deployment_timestamp: 1721650194
+    deployment_timestamp: 1721651057
+    deployment_type: normal
   meta_implementation:
     address: '0x326B089670ba0E6700B1821c34d7b4Afddb11d1b'
     compiler_settings:
@@ -54,8 +58,9 @@ contracts:
       optimisation_level: CODESIZE
     constructor_args_encoded: null
     contract_github_url: https://github.com/curvefi/curve-lite/blob/dd15266111683807cf1ea57f1dfc45c25e61ec3a/contracts/amm/stableswap/meta_implementation/meta_implementation_v_700.vy
-    contract_version: blueprint
-    deployment_timestamp: 1721650204
+    contract_version: 7.0.0
+    deployment_timestamp: 1721651058
+    deployment_type: blueprint
   router:
     address: '0x2cb6bCe32aeF4eD506382896e702DE7Ff109D9E9'
     compiler_settings:
@@ -65,7 +70,8 @@ contracts:
     constructor_args_encoded: 000000000000000000000000c02aaa39b223fe8d0a0e5c4f27ead9083c756cc2
     contract_github_url: https://github.com/curvefi/curve-lite/blob/0f3143402f74b3e43f8287e65130b3ce32aa89ac/contracts/helpers/router/router_v_110.vy
     contract_version: 1.1.0
-    deployment_timestamp: 1721650193
+    deployment_timestamp: 1721651056
+    deployment_type: normal
   views:
     address: '0xDa5e407C7b1887E7f76c920B70614e73feA0DDA1'
     compiler_settings:
@@ -75,4 +81,5 @@ contracts:
     constructor_args_encoded: null
     contract_github_url: https://github.com/curvefi/curve-lite/blob/03cd0cecb6cf78ec926310a2fe8976efa607d0e6/contracts/amm/stableswap/views/views_v_120.vy
     contract_version: 1.2.0
-    deployment_timestamp: 1721650194
+    deployment_timestamp: 1721651057
+    deployment_type: normal
