--- a/deployments/example.yaml
+++ b/deployments/example.yaml
@@ -8,17 +8,175 @@ config:
   owner: '0x40907540d8a6C65c637785e8f8B742ae6b0b9968'
   weth: '0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2'
 contracts:
+  amm:
+    stableswap:
+      factory:
+        address: '0x73f2D414DCE6AAbB3672bd5BF732A2C87cBff751'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: shanghai
+          optimisation_level: GAS
+        constructor_args_encoded: 000000000000000000000000ecb456ea5365865ebab8a2661b0c503410e9b34700000000000000000000000000de89c733555886f785b0c32b498300297e481f
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/dd15266111683807cf1ea57f1dfc45c25e61ec3a/contracts/amm/stableswap/factory/factory_v_100.vy
+        contract_version: 1.0.0
+        deployment_timestamp: 1721736691
+        deployment_type: normal
+      implementation:
+        address: '0xB822167C7EefF0B53DcfDEE2D8fe73dEDB25505b'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: shanghai
+          optimisation_level: CODESIZE
+        constructor_args_encoded: null
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/39693133dc01e53f4c2ba5b1d58aeefb493fe7f7/contracts/amm/stableswap/implementation/implementation_v_700.vy
+        contract_version: 7.0.0
+        deployment_timestamp: 1721736690
+        deployment_type: blueprint
+      math:
+        address: '0x0880cf17Bd263d3d3a5c09D2D86cCecA3CcbD97c'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: shanghai
+          optimisation_level: GAS
+        constructor_args_encoded: null
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/dd15266111683807cf1ea57f1dfc45c25e61ec3a/contracts/amm/stableswap/math/math_v_100.vy
+        contract_version: 1.0.0
+        deployment_timestamp: 1721736689
+        deployment_type: normal
+      meta_implementation:
+        address: '0xDa5e407C7b1887E7f76c920B70614e73feA0DDA1'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: paris
+          optimisation_level: CODESIZE
+        constructor_args_encoded: null
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/dd15266111683807cf1ea57f1dfc45c25e61ec3a/contracts/amm/stableswap/meta_implementation/meta_implementation_v_700.vy
+        contract_version: 7.0.0
+        deployment_timestamp: 1721736690
+        deployment_type: blueprint
+      views:
+        address: '0x2cb6bCe32aeF4eD506382896e702DE7Ff109D9E9'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: paris
+          optimisation_level: GAS
+        constructor_args_encoded: null
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/03cd0cecb6cf78ec926310a2fe8976efa607d0e6/contracts/amm/stableswap/views/views_v_120.vy
+        contract_version: 1.2.0
+        deployment_timestamp: 1721736689
+        deployment_type: normal
+    tricryptoswap:
+      factory:
+        address: '0x98dBBdba1A3f3e0b41dACf0B340ff5C2250A961A'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: paris
+          optimisation_level: GAS
+        constructor_args_encoded: 000000000000000000000000ecb456ea5365865ebab8a2661b0c503410e9b34700000000000000000000000000de89c733555886f785b0c32b498300297e481f
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/tricryptoswap/factory/factory_v_200.vy
+        contract_version: 2.0.0
+        deployment_timestamp: 1721736694
+        deployment_type: normal
+      implementation:
+        address: '0x864C57A226c39F4cfC30A589B9198D583Ad6971a'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: paris
+          optimisation_level: GAS
+        constructor_args_encoded: null
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/14022145c05a95650d8379b45e51e72b1860e4e3/contracts/amm/tricryptoswap/implementation/implementation_v_200.vy
+        contract_version: 2.0.0
+        deployment_timestamp: 1721736693
+        deployment_type: blueprint
+      math:
+        address: '0x326B089670ba0E6700B1821c34d7b4Afddb11d1b'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: paris
+          optimisation_level: GAS
+        constructor_args_encoded: null
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/tricryptoswap/math/math_v_200.vy
+        contract_version: 2.0.0
+        deployment_timestamp: 1721736692
+        deployment_type: normal
+      views:
+        address: '0x261B5BAEBC6A3DdA3b91ADa3778AD3a3503bFD18'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: paris
+          optimisation_level: GAS
+        constructor_args_encoded: null
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/tricryptoswap/views/views_v_200.vy
+        contract_version: 2.0.0
+        deployment_timestamp: 1721736692
+        deployment_type: normal
+    twocryptoswap:
+      factory:
+        address: '0x8C3472B89e6D095201334A1d4Bbb5Ea8227A833C'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: paris
+          optimisation_level: GAS
+        constructor_args_encoded: null
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/twocryptoswap/factory/factory_v_200.vy
+        contract_version: 2.0.0
+        deployment_timestamp: 1721736695
+        deployment_type: normal
+      implementation:
+        address: '0xad9485a04927970E8448eB0DA2D2035FF22Ec546'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: paris
+          optimisation_level: GAS
+        constructor_args_encoded: null
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/14022145c05a95650d8379b45e51e72b1860e4e3/contracts/amm/twocryptoswap/implementation/implementation_v_210.vy
+        contract_version: 2.1.0
+        deployment_timestamp: 1721736695
+        deployment_type: blueprint
+      math:
+        address: '0x22bDac327bD8a73244769EB5CF7bf57552DDcBcB'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: paris
+          optimisation_level: GAS
+        constructor_args_encoded: null
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/6a6508e2cc2d40c34187d2db23792633c119c844/contracts/amm/twocryptoswap/math/math_v_210.vy
+        contract_version: 2.1.0
+        deployment_timestamp: 1721736694
+        deployment_type: normal
+      views:
+        address: '0xE9A18199203e2a547B2E9CB335a9F3A3c14A77f7'
+        compiler_settings:
+          compiler_version: 0.3.10
+          evm_version: paris
+          optimisation_level: GAS
+        constructor_args_encoded: null
+        contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/twocryptoswap/views/views_v_200.vy
+        contract_version: 2.0.0
+        deployment_timestamp: 1721736694
+        deployment_type: normal
   helpers:
-    address_provider:
-      address: '0x0880cf17Bd263d3d3a5c09D2D86cCecA3CcbD97c'
+    deposit_and_stake_zap:
+      address: '0x5169928944522977ee7F9968b9EaF6a5917b5B1F'
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: paris
         optimisation_level: GAS
       constructor_args_encoded: null
-      contract_github_url: https://github.com/curvefi/curve-lite/blob/df153f82b7d86f67bed2adc70f0f444df0891656/contracts/registries/address_provider/address_provider_v_201.vy
-      contract_version: 2.0.1
-      deployment_timestamp: 1721724927
+      contract_github_url: https://github.com/curvefi/curve-lite/blob/0f3143402f74b3e43f8287e65130b3ce32aa89ac/contracts/helpers/deposit_and_stake_zap/deposit_and_stake_zap_v_100.vy
+      contract_version: 1.0.0
+      deployment_timestamp: 1721736643
+      deployment_type: normal
+    rate_provider:
+      address: '0x3980F1806b55e38dA48390ffFbf2b2FEFB329586'
+      compiler_settings:
+        compiler_version: 0.3.10
+        evm_version: paris
+        optimisation_level: GAS
+      constructor_args_encoded: 0000000000000000000000000880cf17bd263d3d3a5c09d2d86cceca3ccbd97c
+      contract_github_url: https://github.com/curvefi/curve-lite/blob/3be84d0a77b340f002f759131d0dfd2477f58ca9/contracts/helpers/rate_provider/rate_provider_v_100.vy
+      contract_version: 1.0.0
+      deployment_timestamp: 1721736644
       deployment_type: normal
     router:
       address: '0x2cb6bCe32aeF4eD506382896e702DE7Ff109D9E9'
@@ -29,5 +187,39 @@ contracts:
       constructor_args_encoded: 000000000000000000000000c02aaa39b223fe8d0a0e5c4f27ead9083c756cc2
       contract_github_url: https://github.com/curvefi/curve-lite/blob/0f3143402f74b3e43f8287e65130b3ce32aa89ac/contracts/helpers/router/router_v_110.vy
       contract_version: 1.1.0
-      deployment_timestamp: 1721724928
+      deployment_timestamp: 1721736637
+      deployment_type: normal
+    stable_swap_meta_zap:
+      address: '0xc321fb297739feBA3aB49987C758AD6463661B24'
+      compiler_settings:
+        compiler_version: 0.3.10
+        evm_version: paris
+        optimisation_level: GAS
+      constructor_args_encoded: null
+      contract_github_url: https://github.com/curvefi/curve-lite/blob//contracts/helpers/stable_swap_meta_zap/stable_swap_meta_zap_v_100.vy
+      contract_version: 1.0.0
+      deployment_timestamp: 1721736644
+      deployment_type: normal
+  registries:
+    address_provider:
+      address: '0x0880cf17Bd263d3d3a5c09D2D86cCecA3CcbD97c'
+      compiler_settings:
+        compiler_version: 0.3.10
+        evm_version: paris
+        optimisation_level: GAS
+      constructor_args_encoded: null
+      contract_github_url: https://github.com/curvefi/curve-lite/blob/df153f82b7d86f67bed2adc70f0f444df0891656/contracts/registries/address_provider/address_provider_v_201.vy
+      contract_version: 2.0.1
+      deployment_timestamp: 1721736602
+      deployment_type: normal
+    metaregistry:
+      address: '0x0880cf17Bd263d3d3a5c09D2D86cCecA3CcbD97c'
+      compiler_settings:
+        compiler_version: 0.3.10
+        evm_version: paris
+        optimisation_level: GAS
+      constructor_args_encoded: 0000000000000000000000000000000000000000000000000000000000000000ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
+      contract_github_url: https://github.com/curvefi/curve-lite/blob/df153f82b7d86f67bed2adc70f0f444df0891656/contracts/registries/metaregistry/metaregistry_v_110.vy
+      contract_version: 1.1.0
+      deployment_timestamp: 1721736637
       deployment_type: normal
