--- a/deployments/example.yaml
+++ b/deployments/example.yaml
@@ -8,10 +8,10 @@ config:
   fee_receiver: '0xeCb456EA5365865EbAb8a2661B0c503410e9B347'
   native_currency_coingecko_id: ethereum
   native_currency_symbol: ETH
+  native_wrapped_token: '0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2'
   owner: '0x40907540d8a6C65c637785e8f8B742ae6b0b9968'
   platform_coingecko_id: ethereum
   public_rpc_url: https://eth.llamarpc.com
-  weth: '0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2'
 contracts:
   amm:
     stableswap:
@@ -24,7 +24,7 @@ contracts:
         constructor_args_encoded: 000000000000000000000000ecb456ea5365865ebab8a2661b0c503410e9b34700000000000000000000000000de89c733555886f785b0c32b498300297e481f
         contract_github_url: https://github.com/curvefi/curve-lite/blob/dd15266111683807cf1ea57f1dfc45c25e61ec3a/contracts/amm/stableswap/factory/factory_v_100.vy
         contract_version: 1.0.0
-        deployment_timestamp: 1721918303
+        deployment_timestamp: 1721934841
         deployment_type: normal
       implementation:
         address: '0x326B089670ba0E6700B1821c34d7b4Afddb11d1b'
@@ -35,7 +35,7 @@ contracts:
         constructor_args_encoded: null
         contract_github_url: https://github.com/curvefi/curve-lite/blob/39693133dc01e53f4c2ba5b1d58aeefb493fe7f7/contracts/amm/stableswap/implementation/implementation_v_700.vy
         contract_version: 7.0.0
-        deployment_timestamp: 1721918301
+        deployment_timestamp: 1721934839
         deployment_type: blueprint
       math:
         address: '0xDa5e407C7b1887E7f76c920B70614e73feA0DDA1'
@@ -46,7 +46,7 @@ contracts:
         constructor_args_encoded: null
         contract_github_url: https://github.com/curvefi/curve-lite/blob/dd15266111683807cf1ea57f1dfc45c25e61ec3a/contracts/amm/stableswap/math/math_v_100.vy
         contract_version: 1.0.0
-        deployment_timestamp: 1721918300
+        deployment_timestamp: 1721934839
         deployment_type: normal
       meta_implementation:
         address: '0x261B5BAEBC6A3DdA3b91ADa3778AD3a3503bFD18'
@@ -57,7 +57,7 @@ contracts:
         constructor_args_encoded: null
         contract_github_url: https://github.com/curvefi/curve-lite/blob/dd15266111683807cf1ea57f1dfc45c25e61ec3a/contracts/amm/stableswap/meta_implementation/meta_implementation_v_700.vy
         contract_version: 7.0.0
-        deployment_timestamp: 1721918301
+        deployment_timestamp: 1721934840
         deployment_type: blueprint
       views:
         address: '0x73f2D414DCE6AAbB3672bd5BF732A2C87cBff751'
@@ -68,7 +68,7 @@ contracts:
         constructor_args_encoded: null
         contract_github_url: https://github.com/curvefi/curve-lite/blob/03cd0cecb6cf78ec926310a2fe8976efa607d0e6/contracts/amm/stableswap/views/views_v_120.vy
         contract_version: 1.2.0
-        deployment_timestamp: 1721918300
+        deployment_timestamp: 1721934839
         deployment_type: normal
     tricryptoswap:
       factory:
@@ -80,7 +80,7 @@ contracts:
         constructor_args_encoded: 000000000000000000000000ecb456ea5365865ebab8a2661b0c503410e9b34700000000000000000000000000de89c733555886f785b0c32b498300297e481f
         contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/tricryptoswap/factory/factory_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1721918305
+        deployment_timestamp: 1721934844
         deployment_type: normal
       implementation:
         address: '0xE9A18199203e2a547B2E9CB335a9F3A3c14A77f7'
@@ -91,7 +91,7 @@ contracts:
         constructor_args_encoded: null
         contract_github_url: https://github.com/curvefi/curve-lite/blob/14022145c05a95650d8379b45e51e72b1860e4e3/contracts/amm/tricryptoswap/implementation/implementation_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1721918304
+        deployment_timestamp: 1721934843
         deployment_type: blueprint
       math:
         address: '0x98dBBdba1A3f3e0b41dACf0B340ff5C2250A961A'
@@ -102,7 +102,7 @@ contracts:
         constructor_args_encoded: null
         contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/tricryptoswap/math/math_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1721918303
+        deployment_timestamp: 1721934842
         deployment_type: normal
       views:
         address: '0x22bDac327bD8a73244769EB5CF7bf57552DDcBcB'
@@ -113,7 +113,7 @@ contracts:
         constructor_args_encoded: null
         contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/tricryptoswap/views/views_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1721918304
+        deployment_timestamp: 1721934842
         deployment_type: normal
     twocryptoswap:
       factory:
@@ -125,7 +125,7 @@ contracts:
         constructor_args_encoded: null
         contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/twocryptoswap/factory/factory_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1721918306
+        deployment_timestamp: 1721934845
         deployment_type: normal
       implementation:
         address: '0xBae83bdb6FF2af4f330DD24D56344193DDF1A9F3'
@@ -136,7 +136,7 @@ contracts:
         constructor_args_encoded: null
         contract_github_url: https://github.com/curvefi/curve-lite/blob/14022145c05a95650d8379b45e51e72b1860e4e3/contracts/amm/twocryptoswap/implementation/implementation_v_210.vy
         contract_version: 2.1.0
-        deployment_timestamp: 1721918306
+        deployment_timestamp: 1721934845
         deployment_type: blueprint
       math:
         address: '0x8C3472B89e6D095201334A1d4Bbb5Ea8227A833C'
@@ -147,7 +147,7 @@ contracts:
         constructor_args_encoded: null
         contract_github_url: https://github.com/curvefi/curve-lite/blob/6a6508e2cc2d40c34187d2db23792633c119c844/contracts/amm/twocryptoswap/math/math_v_210.vy
         contract_version: 2.1.0
-        deployment_timestamp: 1721918305
+        deployment_timestamp: 1721934844
         deployment_type: normal
       views:
         address: '0xB372E22cC331980f8D5dbD955789e67420E0a53f'
@@ -158,7 +158,7 @@ contracts:
         constructor_args_encoded: null
         contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/twocryptoswap/views/views_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1721918305
+        deployment_timestamp: 1721934844
         deployment_type: normal
   helpers:
     deposit_and_stake_zap:
@@ -170,7 +170,7 @@ contracts:
       constructor_args_encoded: null
       contract_github_url: https://github.com/curvefi/curve-lite/blob/0f3143402f74b3e43f8287e65130b3ce32aa89ac/contracts/helpers/deposit_and_stake_zap/deposit_and_stake_zap_v_100.vy
       contract_version: 1.0.0
-      deployment_timestamp: 1721918307
+      deployment_timestamp: 1721934846
       deployment_type: normal
     rate_provider:
       address: '0x42BfAf1D3b0b40A6D8534376feF76DAE08d7Cb5A'
@@ -181,7 +181,7 @@ contracts:
       constructor_args_encoded: 0000000000000000000000000880cf17bd263d3d3a5c09d2d86cceca3ccbd97c
       contract_github_url: https://github.com/curvefi/curve-lite/blob/3be84d0a77b340f002f759131d0dfd2477f58ca9/contracts/helpers/rate_provider/rate_provider_v_100.vy
       contract_version: 1.0.0
-      deployment_timestamp: 1721918310
+      deployment_timestamp: 1721934846
       deployment_type: normal
     router:
       address: '0xB822167C7EefF0B53DcfDEE2D8fe73dEDB25505b'
@@ -192,7 +192,7 @@ contracts:
       constructor_args_encoded: 000000000000000000000000c02aaa39b223fe8d0a0e5c4f27ead9083c756cc2
       contract_github_url: https://github.com/curvefi/curve-lite/blob/0f3143402f74b3e43f8287e65130b3ce32aa89ac/contracts/helpers/router/router_v_110.vy
       contract_version: 1.1.0
-      deployment_timestamp: 1721918300
+      deployment_timestamp: 1721934839
       deployment_type: normal
     stable_swap_meta_zap:
       address: '0x3980F1806b55e38dA48390ffFbf2b2FEFB329586'
@@ -203,7 +203,7 @@ contracts:
       constructor_args_encoded: null
       contract_github_url: https://github.com/curvefi/curve-lite/blob/eb1dba99925e42e4f5320b8f032dbd0b24ff28d2/contracts/helpers/stable_swap_meta_zap/stable_swap_meta_zap_v_100.vy
       contract_version: 1.0.0
-      deployment_timestamp: 1721918309
+      deployment_timestamp: 1721934846
       deployment_type: normal
   registries:
     address_provider:
@@ -215,7 +215,7 @@ contracts:
       constructor_args_encoded: null
       contract_github_url: https://github.com/curvefi/curve-lite/blob/df153f82b7d86f67bed2adc70f0f444df0891656/contracts/registries/address_provider/address_provider_v_201.vy
       contract_version: 2.0.1
-      deployment_timestamp: 1721918299
+      deployment_timestamp: 1721934838
       deployment_type: normal
     metaregistry:
       address: '0x2cb6bCe32aeF4eD506382896e702DE7Ff109D9E9'
@@ -226,7 +226,7 @@ contracts:
       constructor_args_encoded: 0000000000000000000000000000000000000000000000000000000000000000ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
       contract_github_url: https://github.com/curvefi/curve-lite/blob/df153f82b7d86f67bed2adc70f0f444df0891656/contracts/registries/metaregistry/metaregistry_v_110.vy
       contract_version: 1.1.0
-      deployment_timestamp: 1721918299
+      deployment_timestamp: 1721934838
       deployment_type: normal
       registry_handlers:
         stableswap:
@@ -238,7 +238,7 @@ contracts:
           constructor_args_encoded: 000000000000000000000000864c57a226c39f4cfc30a589b9198d583ad6971a
           contract_github_url: https://github.com/curvefi/curve-lite/blob/312513e50c4c7a4a084da44af73ed944e08d37f7/contracts/registries/metaregistry/registry_handlers/stableswap/handler_v_110.vy
           contract_version: 1.1.0
-          deployment_timestamp: 1721918320
+          deployment_timestamp: 1721934855
           deployment_type: normal
         tricryptoswap:
           address: '0x80183503F14FCe9fdd36E8461d0b48c39593D2F5'
@@ -249,7 +249,7 @@ contracts:
           constructor_args_encoded: 000000000000000000000000ad9485a04927970e8448eb0da2d2035ff22ec546
           contract_github_url: https://github.com/curvefi/curve-lite/blob/312513e50c4c7a4a084da44af73ed944e08d37f7/contracts/registries/metaregistry/registry_handlers/tricryptoswap/handler_v_110.vy
           contract_version: 1.1.0
-          deployment_timestamp: 1721918321
+          deployment_timestamp: 1721934856
           deployment_type: normal
         twocryptoswap:
           address: '0xc5c20213D4b52B092900254aFe21101764969F35'
@@ -260,5 +260,5 @@ contracts:
           constructor_args_encoded: 000000000000000000000000ad9485a04927970e8448eb0da2d2035ff22ec546
           contract_github_url: https://github.com/curvefi/curve-lite/blob/312513e50c4c7a4a084da44af73ed944e08d37f7/contracts/registries/metaregistry/registry_handlers/twocryptoswap/handler_v_110.vy
           contract_version: 1.1.0
-          deployment_timestamp: 1721918322
+          deployment_timestamp: 1721934856
           deployment_type: normal
