--- a/settings/chains/example.yaml
+++ b/settings/chains/example.yaml
@@ -2,7 +2,7 @@ chain: example
 chain_id: 1
 rollup_type: _
 explorer_base_url: https://etherscan.io
-weth: "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2"
+native_wrapped_token: "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2"
 owner: "0x40907540d8a6C65c637785e8f8B742ae6b0b9968"
 fee_receiver: "0xeCb456EA5365865EbAb8a2661B0c503410e9B347"
 
