--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,13 @@ packages = [{include = "curve_lite"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-titanoboa-zksync = {git = "https://github.com/DanielSchiavini/titanoboa-zksync.git", rev = "9c162ba56a176bf2ba1b211b61fc175a6bcd1111"}
 pre-commit = "^3.7.1"
 rich = "^13.7.1"
 pytest = "^8.2.2"
 poetry = "^1.8.3"
 pydantic-settings = "^2.3.4"
 click = "^8.1.7"
+titanoboa = "0.1.10"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
