--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ packages = [{include = "curve_lite"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-titanoboa-zksync = {git = "https://github.com/DanielSchiavini/titanoboa-zksync.git", rev = "9c162ba56a176bf2ba1b211b61fc175a6bcd1111"}
+titanoboa = "0.1.10"
 pre-commit = "^3.7.1"
 rich = "^13.7.1"
 pytest = "^8.2.2"
