--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,17 +5,17 @@ description = "Deploys all smart contracts related to Curve Finance on any EVM c
 authors = ["Curve.Fi"]
 license = "Copyright (c) 2024 Curve.Fi"
 readme = "README.md"
-packages = [{include = "curve_lite"}]
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
-titanoboa = "0.1.10"
 pre-commit = "^3.7.1"
 rich = "^13.7.1"
 pytest = "^8.2.2"
 poetry = "^1.8.3"
 pydantic-settings = "^2.3.4"
 click = "^8.1.7"
+curve-boa = "0.1.10.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "24.4.2"
