use vyper 0.3.10 wherever possible

--- a/settings/chains/corn.yaml
+++ b/settings/chains/corn.yaml
@@ -1,12 +1,9 @@
 network_name: corn_maizenet
 chain_id: 21000000
-rollup_type: _
+rollup_type: arb_orbit
 dao:
-  crv: "0x09413312b263fD252C16e592A45f4689F26cb79d"
-  emergency_admin: "0xA73EdCf18421B56D9AF1cE08A34E102E23b2C4B6"
-  ownership_admin: "0x6c9578402A3ace046A12839f45F84Aa5448E9c30"
-  parameter_admin: "0xEC5AFc9590964f2fA0FeED54f0fBB2A34480908D"
-  vault: "0x3c0a405E914337139992625D5100Ea141a9C4d11"
+  crv: "0xda5dDd7270381A7C2717aD10D1c0ecB19e3CDFb2"
+  crvusd: "0xda5dDd7270381A7C2717aD10D1c0ecB19e3CDFb2"
 explorer_base_url: https://cornscan.io/
 
 # Not related to development, for further integrations
