update deployed yaml files for backwards compatibility

--- a/deployments/devnet/arb_sepolia.yaml
+++ b/deployments/devnet/arb_sepolia.yaml
@@ -1,14 +1,15 @@
 config:
   chain_id: 421614
   dao:
-    crv: '0x50FB01Ee521b9D22cdcb713a505019f41b8BBFf4'
-    crvusd: '0x92fc3EfE9129675A6d1405519C38b3aDdE4E0ADe'
-    emergency_admin: '0x3be4889df544db237798eA1bA4EF9F9d4553A6D6'
-    ownership_admin: '0xd0013D1a8635Cf0357380b9906ceb00c524Fb1ab'
-    parameter_admin: '0x6300D9f6983C088345203C3a9110A46Fe9Fc9BEc'
-    vault: '0xff12c0df72E02ab9C1fD8b986d21FF8992a8cCEE'
+    crv: "0x50FB01Ee521b9D22cdcb713a505019f41b8BBFf4"
+    crvusd: "0x92fc3EfE9129675A6d1405519C38b3aDdE4E0ADe"
+    emergency_admin: "0x3be4889df544db237798eA1bA4EF9F9d4553A6D6"
+    ownership_admin: "0xd0013D1a8635Cf0357380b9906ceb00c524Fb1ab"
+    parameter_admin: "0x6300D9f6983C088345203C3a9110A46Fe9Fc9BEc"
+    vault: "0xff12c0df72E02ab9C1fD8b986d21FF8992a8cCEE"
   explorer_base_url: https://sepolia.arbiscan.io/
-  file_name: tutorial_arb_sepolia
+  file_name: arbitrum-sepolia
+  file_path: devnet/arb_sepolia.yaml
   layer: 2
   native_currency_coingecko_id: ethereum
   native_currency_symbol: ETH
@@ -16,12 +17,12 @@ config:
   platform_coingecko_id: ethereum
   public_rpc_url: https://sepolia-rollup.arbitrum.io/rpc
   rollup_type: arb_orbit
-  wrapped_native_token: '0x980B62Da83eFf3D4576C647993b0c1D7faf17c73'
+  wrapped_native_token: "0x980B62Da83eFf3D4576C647993b0c1D7faf17c73"
 contracts:
   amm:
     stableswap:
       factory:
-        address: '0x4279B80fc9e645B4266db351AbB6F6aBe3e35d6e'
+        address: "0x4279B80fc9e645B4266db351AbB6F6aBe3e35d6e"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: shanghai
@@ -33,7 +34,7 @@ contracts:
         deployment_timestamp: 1727794011
         deployment_type: normal
       implementation:
-        address: '0xD313f46d622E0998614aF6177387936c3E9471a1'
+        address: "0xD313f46d622E0998614aF6177387936c3E9471a1"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: shanghai
@@ -45,7 +46,7 @@ contracts:
         deployment_timestamp: 1727793998
         deployment_type: blueprint
       math:
-        address: '0x96720942F9fF22eFd8611F696E5333Fe3671717a'
+        address: "0x96720942F9fF22eFd8611F696E5333Fe3671717a"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: shanghai
@@ -57,7 +58,7 @@ contracts:
         deployment_timestamp: 1727793989
         deployment_type: normal
       meta_implementation:
-        address: '0x8f06dabbfd501B2814a724F07305fbd9FD3d82B3'
+        address: "0x8f06dabbfd501B2814a724F07305fbd9FD3d82B3"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -69,7 +70,7 @@ contracts:
         deployment_timestamp: 1727794003
         deployment_type: blueprint
       views:
-        address: '0x03Fb009123749856685538d957f75C69bCadBB45'
+        address: "0x03Fb009123749856685538d957f75C69bCadBB45"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -82,7 +83,7 @@ contracts:
         deployment_type: normal
     tricryptoswap:
       factory:
-        address: '0x08546C3f3ff14615FDDF9F6067c07D24a4f3B125'
+        address: "0x08546C3f3ff14615FDDF9F6067c07D24a4f3B125"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -94,7 +95,7 @@ contracts:
         deployment_timestamp: 1727794053
         deployment_type: normal
       implementation:
-        address: '0xFDc7483c4c356F547ba7258E1fedF909D0CB26d7'
+        address: "0xFDc7483c4c356F547ba7258E1fedF909D0CB26d7"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -106,7 +107,7 @@ contracts:
         deployment_timestamp: 1727794047
         deployment_type: blueprint
       math:
-        address: '0x407e8690d0FbfD165f9fbCc7AB277bE0B75B10E2'
+        address: "0x407e8690d0FbfD165f9fbCc7AB277bE0B75B10E2"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -118,7 +119,7 @@ contracts:
         deployment_timestamp: 1727794037
         deployment_type: normal
       views:
-        address: '0x6f9CC657d762939848886E98A9b1969D45BF9d51'
+        address: "0x6f9CC657d762939848886E98A9b1969D45BF9d51"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -131,7 +132,7 @@ contracts:
         deployment_type: normal
     twocryptoswap:
       factory:
-        address: '0x47b6eC48a4fb04Cc33bDb9040dD5bca1d87D886B'
+        address: "0x47b6eC48a4fb04Cc33bDb9040dD5bca1d87D886B"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -143,7 +144,7 @@ contracts:
         deployment_timestamp: 1727794090
         deployment_type: normal
       implementation:
-        address: '0x511c9E4c3EFc9607eeC24f14C545e0747E00dCE5'
+        address: "0x511c9E4c3EFc9607eeC24f14C545e0747E00dCE5"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -155,7 +156,7 @@ contracts:
         deployment_timestamp: 1727794084
         deployment_type: blueprint
       math:
-        address: '0x57eb02fa9ee9cAe4935Be471F5835111b8775005'
+        address: "0x57eb02fa9ee9cAe4935Be471F5835111b8775005"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -167,7 +168,7 @@ contracts:
         deployment_timestamp: 1727794074
         deployment_type: normal
       views:
-        address: '0xBB8e697BcDD4b68E904b5e332b9F07F35b8CE6B2'
+        address: "0xBB8e697BcDD4b68E904b5e332b9F07F35b8CE6B2"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -181,7 +182,7 @@ contracts:
   gauge:
     child_gauge:
       factory:
-        address: '0xA0a2998810cfCa4e3Bc2bc20621000713027939d'
+        address: "0xA0a2998810cfCa4e3Bc2bc20621000713027939d"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: paris
@@ -193,7 +194,7 @@ contracts:
         deployment_timestamp: 1727793768
         deployment_type: normal
       implementation:
-        address: '0xA0E1D644B4D7103222dF2D6556cA8d2b9025e390'
+        address: "0xA0E1D644B4D7103222dF2D6556cA8d2b9025e390"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: null
@@ -206,7 +207,7 @@ contracts:
         deployment_type: normal
   governance:
     agent:
-      address: '0x9FcBca4670286367fAAF72C25F6B11078fD9F4a9'
+      address: "0x9FcBca4670286367fAAF72C25F6B11078fD9F4a9"
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: null
@@ -219,7 +220,7 @@ contracts:
       deployment_type: blueprint
     relayer:
       arb_orbit:
-        address: '0x1cf6E40ebb3787Ad89a1ec9bDDB872c87a391693'
+        address: "0x1cf6E40ebb3787Ad89a1ec9bDDB872c87a391693"
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: null
@@ -231,7 +232,7 @@ contracts:
         deployment_timestamp: 1727793754
         deployment_type: normal
     vault:
-      address: '0xff12c0df72E02ab9C1fD8b986d21FF8992a8cCEE'
+      address: "0xff12c0df72E02ab9C1fD8b986d21FF8992a8cCEE"
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: null
@@ -244,7 +245,7 @@ contracts:
       deployment_type: normal
   helpers:
     deposit_and_stake_zap:
-      address: '0xD89bd45C4C120Fc7c12FD8f90094A0D548f0C293'
+      address: "0xD89bd45C4C120Fc7c12FD8f90094A0D548f0C293"
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: paris
@@ -256,7 +257,7 @@ contracts:
       deployment_timestamp: 1727794110
       deployment_type: normal
     rate_provider:
-      address: '0xc3033Df777DFD92170e87d3d54ED9c20429Ab20C'
+      address: "0xc3033Df777DFD92170e87d3d54ED9c20429Ab20C"
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: paris
@@ -268,7 +269,7 @@ contracts:
       deployment_timestamp: 1727794120
       deployment_type: normal
     router:
-      address: '0x306A45a1478A000dC701A6e1f7a569afb8D9DCD6'
+      address: "0x306A45a1478A000dC701A6e1f7a569afb8D9DCD6"
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: paris
@@ -280,7 +281,7 @@ contracts:
       deployment_timestamp: 1727793983
       deployment_type: normal
     stable_swap_meta_zap:
-      address: '0xF2bECA311ABD6328afF309434B90C8791ce4Bec0'
+      address: "0xF2bECA311ABD6328afF309434B90C8791ce4Bec0"
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: paris
@@ -293,7 +294,7 @@ contracts:
       deployment_type: normal
   registries:
     address_provider:
-      address: '0x9B369eD0d55cA5640eD15cf8FF53E81ea8B68CB8'
+      address: "0x9B369eD0d55cA5640eD15cf8FF53E81ea8B68CB8"
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: paris
@@ -305,7 +306,7 @@ contracts:
       deployment_timestamp: 1727793972
       deployment_type: normal
     metaregistry:
-      address: '0xAFC91E4d983FCE169Bd761348Ceeef1d0e8F2F54'
+      address: "0xAFC91E4d983FCE169Bd761348Ceeef1d0e8F2F54"
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: paris
@@ -318,7 +319,7 @@ contracts:
       deployment_type: normal
       registry_handlers:
         stableswap:
-          address: '0x1A85d26a1DE07384F13C19E26C5956277E120B54'
+          address: "0x1A85d26a1DE07384F13C19E26C5956277E120B54"
           compiler_settings:
             compiler_version: 0.3.10
             evm_version: paris
@@ -330,7 +331,7 @@ contracts:
           deployment_timestamp: 1727794126
           deployment_type: normal
         tricryptoswap:
-          address: '0x306B8D77C5Cf283Bb5d29baf21F537d74638c91B'
+          address: "0x306B8D77C5Cf283Bb5d29baf21F537d74638c91B"
           compiler_settings:
             compiler_version: 0.3.10
             evm_version: paris
@@ -342,7 +343,7 @@ contracts:
           deployment_timestamp: 1727794132
           deployment_type: normal
         twocryptoswap:
-          address: '0x425986ca02c3B79A73c45e4C3D6340CF562249f6'
+          address: "0x425986ca02c3B79A73c45e4C3D6340CF562249f6"
           compiler_settings:
             compiler_version: 0.3.10
             evm_version: paris
