--- a/deployments/debug/hyperliquid_devnet.yaml
+++ b/deployments/debug/hyperliquid_devnet.yaml
@@ -8,9 +8,12 @@ config:
     parameter_admin: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
     vault: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
   explorer_base_url: https://testnet.purrsec.com/
-  file_name: devnet/hyperliquid_devnet
+  file_name: hyperliquid
+  file_path: devnet/hyperliquid.yaml
+  is_testnet: true
   layer: 1
   logo_url: https://i.postimg.cc/9Q5S5B3p/hyperliquid.png
+  multicall2: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
   native_currency_symbol: HYPE
   network_name: hyperliquid
   public_rpc_url: https://api.hyperliquid-testnet.xyz/evm
@@ -33,7 +36,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/amm/stableswap/factory/factory_v_100.vy
         contract_path: /contracts/amm/stableswap/factory/factory_v_100.vy
         contract_version: 1.0.0
-        deployment_timestamp: 1733165723
+        deployment_timestamp: 1733917171
         deployment_type: normal
       implementation:
         address: "0x864C57A226c39F4cfC30A589B9198D583Ad6971a"
@@ -45,7 +48,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/39693133dc01e53f4c2ba5b1d58aeefb493fe7f7/contracts/amm/stableswap/implementation/implementation_v_700.vy
         contract_path: /contracts/amm/stableswap/implementation/implementation_v_700.vy
         contract_version: 7.0.0
-        deployment_timestamp: 1733165721
+        deployment_timestamp: 1733917159
         deployment_type: blueprint
       math:
         address: "0x326B089670ba0E6700B1821c34d7b4Afddb11d1b"
@@ -57,7 +60,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/dd15266111683807cf1ea57f1dfc45c25e61ec3a/contracts/amm/stableswap/math/math_v_100.vy
         contract_path: /contracts/amm/stableswap/math/math_v_100.vy
         contract_version: 1.0.0
-        deployment_timestamp: 1733165720
+        deployment_timestamp: 1733917153
         deployment_type: normal
       meta_implementation:
         address: "0x98dBBdba1A3f3e0b41dACf0B340ff5C2250A961A"
@@ -69,7 +72,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/dd15266111683807cf1ea57f1dfc45c25e61ec3a/contracts/amm/stableswap/meta_implementation/meta_implementation_v_700.vy
         contract_path: /contracts/amm/stableswap/meta_implementation/meta_implementation_v_700.vy
         contract_version: 7.0.0
-        deployment_timestamp: 1733165721
+        deployment_timestamp: 1733917165
         deployment_type: blueprint
       views:
         address: "0x261B5BAEBC6A3DdA3b91ADa3778AD3a3503bFD18"
@@ -81,7 +84,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/03cd0cecb6cf78ec926310a2fe8976efa607d0e6/contracts/amm/stableswap/views/views_v_120.vy
         contract_path: /contracts/amm/stableswap/views/views_v_120.vy
         contract_version: 1.2.0
-        deployment_timestamp: 1733165720
+        deployment_timestamp: 1733917154
         deployment_type: normal
     tricryptoswap:
       factory:
@@ -94,7 +97,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/amm/tricryptoswap/factory/factory_v_200.vy
         contract_path: /contracts/amm/tricryptoswap/factory/factory_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1733165726
+        deployment_timestamp: 1733917184
         deployment_type: normal
       implementation:
         address: "0x8C3472B89e6D095201334A1d4Bbb5Ea8227A833C"
@@ -106,7 +109,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/14022145c05a95650d8379b45e51e72b1860e4e3/contracts/amm/tricryptoswap/implementation/implementation_v_200.vy
         contract_path: /contracts/amm/tricryptoswap/implementation/implementation_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1733165725
+        deployment_timestamp: 1733917182
         deployment_type: blueprint
       math:
         address: "0xE9A18199203e2a547B2E9CB335a9F3A3c14A77f7"
@@ -118,7 +121,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/tricryptoswap/math/math_v_200.vy
         contract_path: /contracts/amm/tricryptoswap/math/math_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1733165724
+        deployment_timestamp: 1733917175
         deployment_type: normal
       views:
         address: "0xad9485a04927970E8448eB0DA2D2035FF22Ec546"
@@ -130,7 +133,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/tricryptoswap/views/views_v_200.vy
         contract_path: /contracts/amm/tricryptoswap/views/views_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1733165725
+        deployment_timestamp: 1733917177
         deployment_type: normal
     twocryptoswap:
       factory:
@@ -143,7 +146,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/amm/twocryptoswap/factory/factory_v_200.vy
         contract_path: /contracts/amm/twocryptoswap/factory/factory_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1733165729
+        deployment_timestamp: 1733917195
         deployment_type: normal
       implementation:
         address: "0xc321fb297739feBA3aB49987C758AD6463661B24"
@@ -155,7 +158,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/14022145c05a95650d8379b45e51e72b1860e4e3/contracts/amm/twocryptoswap/implementation/implementation_v_210.vy
         contract_path: /contracts/amm/twocryptoswap/implementation/implementation_v_210.vy
         contract_version: 2.1.0
-        deployment_timestamp: 1733165728
+        deployment_timestamp: 1733917194
         deployment_type: blueprint
       math:
         address: "0xBae83bdb6FF2af4f330DD24D56344193DDF1A9F3"
@@ -167,7 +170,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/6a6508e2cc2d40c34187d2db23792633c119c844/contracts/amm/twocryptoswap/math/math_v_210.vy
         contract_path: /contracts/amm/twocryptoswap/math/math_v_210.vy
         contract_version: 2.1.0
-        deployment_timestamp: 1733165727
+        deployment_timestamp: 1733917187
         deployment_type: normal
       views:
         address: "0x5169928944522977ee7F9968b9EaF6a5917b5B1F"
@@ -179,7 +182,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/a4cb8201f2c584baec668707a695d35e469ff73b/contracts/amm/twocryptoswap/views/views_v_200.vy
         contract_path: /contracts/amm/twocryptoswap/views/views_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1733165727
+        deployment_timestamp: 1733917189
         deployment_type: normal
   gauge:
     child_gauge:
@@ -193,7 +196,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/5bb8237e41dc0776598884c95797a21b2cad9144/contracts/gauge/child_gauge/factory/factory_v_201.vy
         contract_path: /contracts/gauge/child_gauge/factory/factory_v_201.vy
         contract_version: 2.0.1
-        deployment_timestamp: 1733165717
+        deployment_timestamp: 1733917150
         deployment_type: normal
       implementation:
         address: "0x2cb6bCe32aeF4eD506382896e702DE7Ff109D9E9"
@@ -205,7 +208,7 @@ contracts:
         contract_github_url: https://github.com/curvefi/curve-lite/blob/792f926e32b33ea10bf3de2dd78a24975dffb07d/contracts/gauge/child_gauge/implementation/implementation_v_100.vy
         contract_path: /contracts/gauge/child_gauge/implementation/implementation_v_100.vy
         contract_version: 1.0.0
-        deployment_timestamp: 1733165718
+        deployment_timestamp: 1733917150
         deployment_type: normal
   governance: null
   helpers:
@@ -219,7 +222,7 @@ contracts:
       contract_github_url: https://github.com/curvefi/curve-lite/blob/0f3143402f74b3e43f8287e65130b3ce32aa89ac/contracts/helpers/deposit_and_stake_zap/deposit_and_stake_zap_v_100.vy
       contract_path: /contracts/helpers/deposit_and_stake_zap/deposit_and_stake_zap_v_100.vy
       contract_version: 1.0.0
-      deployment_timestamp: 1733165729
+      deployment_timestamp: 1733917197
       deployment_type: normal
     rate_provider:
       address: "0x80183503F14FCe9fdd36E8461d0b48c39593D2F5"
@@ -231,7 +234,7 @@ contracts:
       contract_github_url: https://github.com/curvefi/curve-lite/blob/30c8dc394ab187934f063ec545da48d5e4ac46db/contracts/helpers/rate_provider/rate_provider_v_101.vy
       contract_path: /contracts/helpers/rate_provider/rate_provider_v_101.vy
       contract_version: 1.0.1
-      deployment_timestamp: 1733165730
+      deployment_timestamp: 1733917200
       deployment_type: normal
     router:
       address: "0x73f2D414DCE6AAbB3672bd5BF732A2C87cBff751"
@@ -243,7 +246,7 @@ contracts:
       contract_github_url: https://github.com/curvefi/curve-lite/blob/0f3143402f74b3e43f8287e65130b3ce32aa89ac/contracts/helpers/router/router_v_110.vy
       contract_path: /contracts/helpers/router/router_v_110.vy
       contract_version: 1.1.0
-      deployment_timestamp: 1733165719
+      deployment_timestamp: 1733917153
       deployment_type: normal
     stable_swap_meta_zap:
       address: "0xaCFbC7865EC1144773ba71C9E8b06dc945edd26B"
@@ -255,7 +258,7 @@ contracts:
       contract_github_url: https://github.com/curvefi/curve-lite/blob/eb1dba99925e42e4f5320b8f032dbd0b24ff28d2/contracts/helpers/stable_swap_meta_zap/stable_swap_meta_zap_v_100.vy
       contract_path: /contracts/helpers/stable_swap_meta_zap/stable_swap_meta_zap_v_100.vy
       contract_version: 1.0.0
-      deployment_timestamp: 1733165730
+      deployment_timestamp: 1733917199
       deployment_type: normal
   registries:
     address_provider:
@@ -268,7 +271,7 @@ contracts:
       contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/registries/address_provider/address_provider_v_201.vy
       contract_path: /contracts/registries/address_provider/address_provider_v_201.vy
       contract_version: 2.0.1
-      deployment_timestamp: 1733165718
+      deployment_timestamp: 1733917151
       deployment_type: normal
     metaregistry:
       address: "0xDa5e407C7b1887E7f76c920B70614e73feA0DDA1"
@@ -280,7 +283,7 @@ contracts:
       contract_github_url: https://github.com/curvefi/curve-lite/blob/6f52fba699d6be12b0a92cf6b0e26e2248067569/contracts/registries/metaregistry/metaregistry_v_110.vy
       contract_path: /contracts/registries/metaregistry/metaregistry_v_110.vy
       contract_version: 1.1.0
-      deployment_timestamp: 1733165719
+      deployment_timestamp: 1733917153
       deployment_type: normal
       registry_handlers:
         stableswap:
@@ -293,7 +296,7 @@ contracts:
           contract_github_url: https://github.com/curvefi/curve-lite/blob/312513e50c4c7a4a084da44af73ed944e08d37f7/contracts/registries/metaregistry/registry_handlers/stableswap/handler_v_110.vy
           contract_path: /contracts/registries/metaregistry/registry_handlers/stableswap/handler_v_110.vy
           contract_version: 1.1.0
-          deployment_timestamp: 1733165731
+          deployment_timestamp: 1733917201
           deployment_type: normal
         tricryptoswap:
           address: "0x4Bc555E718981beBF1d6d31abD66A10093f1A0AF"
@@ -305,7 +308,7 @@ contracts:
           contract_github_url: https://github.com/curvefi/curve-lite/blob/312513e50c4c7a4a084da44af73ed944e08d37f7/contracts/registries/metaregistry/registry_handlers/tricryptoswap/handler_v_110.vy
           contract_path: /contracts/registries/metaregistry/registry_handlers/tricryptoswap/handler_v_110.vy
           contract_version: 1.1.0
-          deployment_timestamp: 1733165732
+          deployment_timestamp: 1733917203
           deployment_type: normal
         twocryptoswap:
           address: "0xAD5C414cCf50D17AF7117Ab87729364bd23B83FE"
@@ -317,5 +320,5 @@ contracts:
           contract_github_url: https://github.com/curvefi/curve-lite/blob/312513e50c4c7a4a084da44af73ed944e08d37f7/contracts/registries/metaregistry/registry_handlers/twocryptoswap/handler_v_110.vy
           contract_path: /contracts/registries/metaregistry/registry_handlers/twocryptoswap/handler_v_110.vy
           contract_version: 1.1.0
-          deployment_timestamp: 1733165732
+          deployment_timestamp: 1733917205
           deployment_type: normal
